# VillaSinfonia.github.io

./: .gitignore  .gitmodules  CNAME  VillaSite.cabal  index.html  site.hs  stack.yaml
css/: default.css  fullcalendar.css
js/fullcalendar-2.5.0/: fullcalendar.css
pages/: chamber_music  chamber_music.html  search  zephyr.html
pages/about_us/: about_us.html  about_us.md  associated_artists.html  associated_artists.md  board_of_trustees.html  board_of_trustees.md  history.html  history.md  search  teacher_biographies.html  teacher_biographies.md  villa_in_the_news.html  villa_in_the_news.md
pages/calendar/: calendar.html  calendar.md
pages/events/: events.html  events.md
pages/gallery/: carnegie_tour_2015.html  carnegie_tour_2015.md  family_concert.html  france_tour_2014.html  france_tour_2014.md  gallery.html  gallery.md  holiday_concert.html  holiday_concert.md  national_anthem.html  national_anthem.md  search.html  senior_solos.html  senior_solos.md  union_square_concert.html  union_square_concert.md  zephyr_camp.html  zephyr_camp.md
pages/programs/: chamber_music.html  community_outreach.html  community_outreach.md  concerts.html  concerts.md  group_classes.html  group_classes.md  orchestra.html  orchestra.md  private_lessons.html  private_lessons.md  programs.html  programs.md  teacher_training.html  teacher_training.md  tours.html  tours.md  zephyr_camp.html  zephyr_camp.md
pages/support_us/: fundraising_events.html  fundraising_events.md  online.html  online.md  purchase_ads.html  purchase_ads.md  support_us.html  (+1 more)
templates/: default.html
